--- a/build.gradle
+++ b/build.gradle
@@ -19,18 +19,18 @@ allprojects {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.3'
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
     compile 'org.slf4j:slf4j-api:1.7.22'
     testCompile 'org.codehaus.groovy:groovy-all:2.3.10'
-    testCompile "org.spockframework:spock-core:1.0-groovy-2.3"
-
+    testCompile 'org.spockframework:spock-core:1.0-groovy-2.3'
     // optional dependencies for using Spock
-    testRuntime "org.hamcrest:hamcrest-core:1.3" // only necessary if Hamcrest matchers are used
-    testRuntime "cglib:cglib-nodep:3.1"
+    testRuntime 'org.hamcrest:hamcrest-core:1.3'
+    // only necessary if Hamcrest matchers are used
+    testRuntime 'cglib:cglib-nodep:3.1'
     // allows mocking of classes (in addition to interfaces)
-    testRuntime "org.objenesis:objenesis:2.1"
+    testRuntime 'org.objenesis:objenesis:2.1'
     // allows mocking of classes without default constructor (together with CGLIB)
 }
 
